# pivot-track

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.example.yaml
example/: tracking-cobaltstrike.example.yml
pivot_track/: cli.py
pivot_track/lib/: __init__.py  output_util.py  printer.py  query.py  track.py  utils.py
pivot_track/lib/connectors/: __init__.py  censys.py  file.py  interface.py  opensearch.py  printer.py  shodan.py
tests/: mocks.py  opensearch_test.py  query_test.py  tracking_test.py  utils_test.py
